<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_background"
    tools:context=".ui.fragments.CollectionRouteFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/amountCollectedHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:gravity="end"
        android:padding="5dp"
        android:text="@string/title_amount_collection"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/amountCollectedValue"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/amountCollectedValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/title_amount_collection"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/amountCollectedHeader"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="amountCollectedHeader,amountCollectedValue" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/amountPaidHeader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:gravity="end|center_vertical"
        android:padding="5dp"
        android:text="@string/title_amount_paid"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/amountPaidEt"
        app:layout_constraintEnd_toStartOf="@+id/amountPaidEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/amountPaidEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:hint="@string/hint_amount_paid"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/amountCollectedHeader"
        app:layout_constraintTop_toTopOf="@id/amountPaidHeader" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="amountPaidHeader,amountPaidEt" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/paymentModeHeader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:gravity="end|center_vertical"
        android:padding="5dp"
        android:text="@string/title_payment_mode"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/paymentModeRadio"
        app:layout_constraintEnd_toStartOf="@+id/paymentModeRadio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier2" />

    <RadioGroup
        android:id="@+id/paymentModeRadio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/paymentModeHeader"
        app:layout_constraintTop_toTopOf="@id/paymentModeHeader">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_cash" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioCheque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_cheque" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/amountCollectionBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:padding="5dp"
        android:text="@string/action_amount_collected"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>